2001-05-31  Joe Shaw  <joe@ximian.com>

	* bonobo/bonobo-canvas-component.c: GObjectify. Change calls to
	GNOME_CANVAS_ITEM_CLASS() to GNOME_CANVAS_ITEM_GET_CLASS(). Make
	gcc_destroy() gcc_finalize().

	* bonobo/bonobo-embeddable.c: GObjectify. Change
	bonobo_embeddable_destroy() to bonobo_embeddable_finalize()

	* bonobo/bonobo-view.c: GObjectify. Delete
	gnome_marshal_NONE__DOUBLE.

2001-05-30  Dietmar Maurer  <dietmar@ximian.com>

	* bonobo/bonobo-control.c (bonobo_control_set_properties): pass a
	Bonobo_PropertyBag instead of a BonoboPropertyBag
	(bonobo_control_get_properties): return a Bonobo_PropertyBag

2001-05-30  Johan Dahlin  <zilch.am@home.se>

	* bonobo/bonobo-ui-toolbar-item.h: Removed duplicate prototypes.
	
2001-05-30  Christophe Merlet  <redfox@eikonex.org>

	* configure.in: Added fr to $ALL_LINGUAS

2001-05-25  Joe Shaw  <joe@ximian.com>

	* bonobo/bonobo-ui-engine-config.c (dialog_new),
	bonobo/bonobo-selector.c (bonobo_selector_construct):
	GTK_STOCK_BUTTON_OK -> GTK_STOCK_OK

2001-05-19  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-plug.[ch]: Derive from GtkPlug.
	* bonobo/bonobo-socket.[ch]: Derive from GtkSocket.

	* bonobo/bonobo-control.c (process_events): Use g_main_context_pending()
	and g_main_context_iteration() instead of gtk_events_pending() and
	gtk_main_iteration().

2001-05-06  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-toolbar-control-item.c
	(set_control_property_bag_value): Use the new bonobo_pbclient_set_value().

2001-05-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-embeddable.c (impl_Bonobo_Embeddable_advise),
	(impl_Bonobo_Embeddable_unadvise): kill.
	(bonobo_embeddable_class_init): upd.

	* changes.txt: add to document changes

	* bonobo/Makefile.am: remove bonobo-desktop.[ch]

	* bonobo/bonobo-desktop.[ch]: remove.

2001-05-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-widget.c (bonobo_widget_launch_component),
	(bonobo_widget_get_objref): kill BonoboObjectClient
