@@ -615,6 +615,23 @@ gcc_finalize (GObject *object)
 	gcc_parent_class->finalize (object);
 }
 
+/* Ripped from gtk+/gtk/gtkmain.c */
+gboolean
+_bonobo_boolean_handled_accumulator (GSignalInvocationHint *ihint,
+				     GValue                *return_accu,
+				     const GValue          *handler_return,
+				     gpointer               dummy)
+{
+	gboolean continue_emission;
+	gboolean signal_handled;
+  
+	signal_handled = g_value_get_boolean (handler_return);
+	g_value_set_boolean (return_accu, signal_handled);
+	continue_emission = !signal_handled;
+	
+	return continue_emission;
+}
+
 static void
 bonobo_canvas_component_class_init (BonoboCanvasComponentClass *klass)
 {
@@ -640,7 +657,7 @@ bonobo_canvas_component_class_init (BonoboCanvasComponentClass *klass)
 			       G_OBJECT_CLASS_TYPE(object_class),
 			       G_SIGNAL_RUN_LAST,
 			       G_STRUCT_OFFSET(BonoboCanvasComponentClass, event),
-			       NULL, NULL,
+			       _bonobo_boolean_handled_accumulator, NULL,
 			       bonobo_marshal_BOOLEAN__POINTER,
 			       G_TYPE_BOOLEAN, 1,
 			       G_TYPE_POINTER);
